--- a/templates/whiteout/whiteout.css
+++ b/templates/whiteout/whiteout.css
@@ -29,6 +29,13 @@ h1 {
   text-transform: uppercase;
 }
 
+h2 {
+  margin: 0;
+  padding:0.2em 1.3em;
+  font-size:130%;
+  font-weight:normal;
+}
+
 a {
   color: #00adef;
   text-decoration: none;
