--- a/templates/stickney/stickney.css
+++ b/templates/stickney/stickney.css
@@ -28,10 +28,10 @@ h1 {
 }
 
 h2 {
-  margin: 0;
-  padding:0.2em 1.3em;
-  font-size:140%;
-  font-weight:normal;
+  margin: 1em;
+  padding: 0;
+  font-size: 100%;
+  font-weight: normal;
 }
 
 a {
