--- a/templates/whiteout/whiteout.css
+++ b/templates/whiteout/whiteout.css
@@ -30,10 +30,10 @@ h1 {
 }
 
 h2 {
-  margin: 0;
-  padding:0.2em 1.3em;
-  font-size:130%;
-  font-weight:normal;
+  margin: 1em 10px;
+  padding: 0 1em;
+  font-size: 100%;
+  font-weight: normal;
 }
 
 a {
